updated gitignore; chages to get it running with rbenv on Florian's MacBook

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
 .DS_Store
-DerivedData
+.Trashes
+
 piecemaker2.dmg.ruby-version
 .ruby-version
+
+
+build/
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+xcuserdata
+!default.pbxuser
+!default.mode1v3
+!default.mode2v3
+!default.perspectivev3
+DerivedData/
+*~.nib
+*.lock
+*.swp
