--- a/piecemaker2/piecemaker2/piecemaker2-Info.plist
+++ b/piecemaker2/piecemaker2/piecemaker2-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>motionbank.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>org.piecemaker.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
