added js-settings to map to nsuserdefaults; started recorder settings; some name changing here and there

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,5 @@
+Pods/*
 .DS_Store
-.Trashes
-
-piecemaker2.dmg.ruby-version
 .ruby-version
-
-
-build/
-*.pbxuser
-*.mode1v3
-*.mode2v3
-*.perspectivev3
-xcuserdata
-!default.pbxuser
-!default.mode1v3
-!default.mode2v3
-!default.perspectivev3
-DerivedData/
-*~.nib
-*.lock
-*.swp
+Pods
+Podfile.lock
